--- a/TODO
+++ b/TODO
@@ -1,26 +1,28 @@
 * Bugs:
 ** when there is already a `&' in a format command M-j inserts another one
 
-** when there is an command-help overlay in the *Ansys-skeleton*
-   buffer, it's not erased for the next skeleton delete-overlay?
-
 ** -is-unix-sytem must be set for helper functions when
    ansys-mode is not yet invoked like -license-status!
    -check-sytem-type
 
 ** autoload of helper functions not yet working   
 
+** when there is an command-help overlay in the *Ansys-skeleton*
+   buffer, it's not erased for the next skeleton delete-overlay?
+
+** C-c C-v displays wrong variables (e. g. ppath etc.)
+
 ** Comments in c*** commands are not possible and highlighted wrongly 
 
 * v12.0.1:
 
 o bugs
-o TODOS, FIXMES in the code
+o fontification levels
 o update -mode-help
 o clean and sort TODO
-o fontification levels
 o experimental user variable fontification
   multiple cleanup:_typ= $ _nm= $ _tag= $ _acnt= $ _temp=: variable fontification is not working 
+o TODOS, FIXMES in the code
 
   - Dieter's M-h
   - update -mode image on google-code to show tooltips
@@ -219,7 +221,7 @@ All bells and whistle of an editor (drop file into E)
    	C-c C-u, C-c C-c
    	$ needs space(s)?
 	,commands
-	colon loop: e.g.: lfillt,(1:3),(2:4),Rad
+	colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
 	ansys completion and emacs expansion C-c ] -- -close-block
 	preview insert skeletons
 	display user variables
