--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,4 +1,7 @@
 * Bugs:
+
+** functions are not completed with parenthesis (`sin(')
+
 ** when there is already a `&' in a format command M-j inserts another one
 
 ** -is-unix-sytem must be set for helper functions when
@@ -14,37 +17,28 @@
 
 ** Comments in c*** commands are not possible and highlighted wrongly 
 
-* v12.0.1:
+**  multiple cleanup:_typ= $ _nm= $ _tag= $ _acnt= $ _temp=: variable fontification is not working 
 
-o bugs
-o fontification levels
+* v12.0.1:
+o bugs c*** highlighting,
+o write a functio for % outside comments  are highlighted in comments!
+o condensed input line ($) behind commands without arguments possible?
+o Are characters behind unique commands shorter than 4 characters
+possible?
+o *goto :branch with character labels such as :1 or :_2 possible?
+o /sol(u) sufficient? 
+o user variable fontification and f. levels
+     (setq font-lock-maximum-decoration '((ansys-mode . 2)))
 o update -mode-help
 o clean and sort TODO
-o experimental user variable fontification
-  multiple cleanup:_typ= $ _nm= $ _tag= $ _acnt= $ _temp=: variable fontification is not working 
+o experimental user variable fontification, *use variables ARG1-9, ...
 o TODOS, FIXMES in the code
 
   - Dieter's M-h
-  - update -mode image on google-code to show tooltips
+  - update -mode image on google-code to show tooltips and fontification
   - load or load-file, what happens with compilation and autoload?
-  - The experimental user variable highlighting is currently only
-    implemented for files with a '.mac' extension.
-  - provide different levels of fontifications
-    font-lock-maximum-decoration '((ansys-mode . 2) (t . t))
-    Provide customisable choice whether commands, functions and/or
-    elements are assembled in the completion list <- redundant?.
   - check whether undocumented commands are still working in v12
   - warn when using legacy elements?  Document this contradicting behaviour
-
-SHELL43 - SHELL181
-SOLID46 - SOLID185 (KEYOPT(3) = 1), or SOLSH190
-VISCO88 - PLANE183
-VISCO89 - SOLID186
-SHELL91, SHELL93, SHELL99 - SHELL281
-VISCO106 - PLANE182
-VISCO107 - SOLID185
-VISCO108 - PLANE183
-SOLID191 - SOLID186 (KEYOPT(3) = 1)
   - update emacs wiki, gcode wiki, todo- or org-mode for README, wiki
     formatting!
   - publication: ANSYS.net (Ansys !!! Sheldon Imaoka
@@ -57,6 +51,8 @@ SOLID191 - SOLID186 (KEYOPT(3) = 1)
     <sparr@mfkrs1.mw.tu-dresden.de>.
 
 * Priority
+  - help string hint for undocumented commands
+  - use abbrev facility for changing deprecated element types
   - optimise -start-run with query of y (start immediately),n (exit),e
     (change params),C-h (help)
   - read env
@@ -67,14 +63,12 @@ SOLID191 - SOLID186 (KEYOPT(3) = 1)
   - make filter of -license-status optionally  
   - substitute text "header" in -variable-view and skeleton-preview
     for an overlay
-  - strange C-c C-v output for *get assignment etc. and sort full
-    entries at the top!
-  - tool-tips in menus especially for skeletons
+  - C-c C-v: Sort used categories at the top and empty categories at the end!
   - C-c C-q sequences are not shown (and stored) in the comint buffer
-  - mode line update
-  - M-? for commented out variables
-  - Mohr-Coulomb criterion
+  - M-?: for commented out variables
+  - M-?: unambiguous commands with following, solver ignored characters
   - M-?: following a variable allocation with `='
+  - Mohr-Coulomb criterion
   - For non-comint-mode usage: display .log file with tail mode
   - explain what a "logical block" means
   - indent format line? M-j
@@ -205,8 +199,9 @@ byte-compile-file
 User's meeting
 October/November
 
-1.) Need LICENSE!
+1.) Need private LICENSE!
      Ansys academic solutions for V11
+2.) Linux Notebook with windows emulation?
 
 -- Very brief introduction: Why not Emacs, especially on Windows?
 Programmed before Microsoft was even founded, working on all current OS
@@ -220,17 +215,17 @@ All bells and whistle of an editor (drop file into E)
 -- APDL hacking
    	C-c C-u, C-c C-c
    	$ needs space(s)?
+	ansys completion and emacs expansion C-c ] -- -close-block
 	,commands
 	colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
-	ansys completion and emacs expansion C-c ] -- -close-block
-	preview insert skeletons
+	preview insert skeletons (alternatively abbrev mode?)
 	display user variables
 	*go not for interactive mode! -> *if *else *endif
 		commenting out
 	selecting blocks C-M-a/b setting mark!
 	loading help navigator
 	display license status	-license-status C-c C-l
--- hardcore Ansys/APDL user
+-- hardcore Ansys/APDL user <- Linux Notebook/machine
         switch off menu, tools, scroll-bar
    	Ansys mode help
 	Emacs-calc
